@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 5, 2011
+.Dd April 21, 2011
 .Dt ATF-TEST-CASE 4
 .Os
 .Sh NAME
@@ -148,6 +148,9 @@ Test cases will log their results to an auxiliary file, which is then
 collected by the test program they are contained in.
 The developer need not care about this as long as he uses the correct
 APIs to implement the test cases.
+.Pp
+The standard input of the test cases is unconditionally connected to
+.Sq /dev/zero .
 .Ss Meta-data
 The following list describes all meta-data properties interpreted
 internally by ATF.
