@@ -14,6 +14,10 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   ensure that test cases are properly defined in test programs and helps
   in catching typos in the names of the body functions.
 
+* PR bin/44882: Made atf-run connect the stdin of test cases to /dev/zero.
+  This provides more consistent results with "normal" execution (in
+  particular, when tests are executed detached from a terminal).
+
 
 Changes in version 0.13
 ***********************
